--- a/src/App.css
+++ b/src/App.css
@@ -30,9 +30,29 @@ html, body {
 .white-pagination .swiper-pagination-bullet.swiper-pagination-bullet-active{
   background: #fff;
 }
+.vertical_line{
+  position: relative;
+}
+.vertical_line::after{
+  content:  "";
+  position: absolute;
+  top: 3rem;
+  left: 50%;
+  transform: translateX(-50%);
+  height: 3px;
+  width: 90%;
+  margin: 0 auto;
+  background: #fff;
+}
 
 @media (max-width:767px) {
   .style2_slider {
     bottom: 7rem;
+  }
+  .vertical_line::after{
+    height: 100%;
+    width: 3px;
+    left: 2rem;
+    top: 0;
   }
 }
